--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://ashivg.github.io/Portfolio/",
+  "homepage": "https://ashivg.github.io/Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
